changes styling on product listing page, fixed spacing for cart, and removes pricing for single items in cart

--- a/src/components/CategoryList/CategoryList.css
+++ b/src/components/CategoryList/CategoryList.css
@@ -3,6 +3,8 @@
     list-style: none;
     padding: 0;
     font-size: 1.7vw;
+    position: absolute;
+    margin-top: 60px;
   }
   
   .CategoryList li {
@@ -10,16 +12,22 @@
     text-align: center;
     border-radius: .5vmin;
     margin-bottom: .5vmin;
+    
   }
       
   .CategoryList li:hover:not(.active) {
     cursor: pointer;
-    background-color: var(--orange);
+    background-color: black;
     color: var(--white);
   }
   
   .CategoryList li.active {
     color: var(--text-dark);
-    background-color: var(--tan-1);
-    border: .1vmin solid var(--tan-3);
+    background-color: #CCCCCC;
+    /* border: .1vmin solid #CCCCCC; */
+  }
+
+  .CategoryListHeader {
+    font-size: 1.7vw;
+    border-bottom: 3px solid var(--Border-primary, #CCCCCC);
   }
