--- a/src/components/KeyboardList/KeyboardList.css
+++ b/src/components/KeyboardList/KeyboardList.css
@@ -1,9 +1,9 @@
 .MenuList {
-    background-color: var(--tan-1);
-    border: .1vmin solid var(--tan-3);
+    background-color: #CCCCCC;
+    border: .1vmin solid black;
     border-radius: 2vmin;
     margin: 3vmin 0;
     padding: 3vmin;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
   }
   
