--- a/src/components/KeyboardListItem/KeyboardListItem.css
+++ b/src/components/KeyboardListItem/KeyboardListItem.css
@@ -7,7 +7,7 @@
     padding: 2vmin;
     color: var(--text-light);
     background-color: var(--white);
-    border: .1vmin solid var(--tan-3);
+    border: .1vmin solid #CCCCCC;
     border-radius: 1vmin;
     font-size: 4vmin;
   }
