--- a/src/components/LineItem/LineItem.css
+++ b/src/components/LineItem/LineItem.css
@@ -1,16 +1,16 @@
 .LineItem {
     width: 100%;
     display: grid;
-    grid-template-columns: 3vw 15.35vw 5.75vw 5.25vw;
+    grid-template-columns: 8vw 12vw 6vw;
     padding: 1vmin 0;
     color: var(--text-light);
-    background-color: var(--white);
-    border-top: .1vmin solid var(--tan-3);
+    background-color: #FFFFFF;
+    border-top: .1vmin solid #CCCCCC;
     font-size: 1.5vw;
   }
   
   .LineItem:last-child {
-    border-bottom: .1vmin solid var(--tan-3);
+    border-bottom: .1vmin solid #CCCCCC;
   }
   
   .LineItem .qty {
